// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableView TableView 1`] = `
<Fragment>
  <PrimaryToolbar
    actionsConfig={
      Object {
        "actions": Array [
          <React.Fragment>
            <PatchRemediationButton
              isDisabled={true}
              isLoading={false}
              onClick={[Function]}
            />
            <Unknown />
          </React.Fragment>,
        ],
      }
    }
    activeFiltersConfig={
      Object {
        "deleteTitle": "Reset filters",
        "filters": Array [],
        "onDelete": [Function],
      }
    }
    bulkSelect={
      Object {
        "checked": false,
        "count": 0,
        "isDisabled": false,
        "items": Array [
          Object {
            "onClick": [Function],
            "title": "Select none (0)",
          },
          Object {
            "onClick": [Function],
            "title": "Select page (0)",
          },
          Object {
            "onClick": [Function],
            "title": "Select all ()",
          },
        ],
        "onSelect": [Function],
        "toggleProps": Object {
          "data-ouia-component-type": "bulk-select-toggle-button",
        },
      }
    }
    exportConfig={
      Object {
        "isDisabled": false,
        "onSelect": [MockFunction],
      }
    }
    filterConfig={
      Object {
        "items": Array [
          Object {
            "label": "First filter",
          },
          Object {
            "filterValues": Object {
              "items": Array [
                Object {
                  "label": "Some checkbox",
                },
              ],
            },
            "label": "Second filter",
            "type": "checkbox",
          },
        ],
      }
    }
    pagination={
      Object {
        "isCompact": true,
        "isDisabled": false,
        "itemCount": undefined,
        "onPerPageSelect": [MockFunction],
        "onSetPage": [MockFunction],
        "ouiaId": "top-undefined",
        "page": NaN,
        "perPage": undefined,
      }
    }
  />
  <Table
    aria-label="Patch table view"
    borders={true}
    canCollapseAll={true}
    canSelectAll={false}
    canSortFavorites={true}
    cells={Array []}
    className=""
    collapseAllAriaLabel=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    isHeaderSelectDisabled={false}
    isNested={false}
    isStickyHeader={true}
    isTreeTable={false}
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={Array []}
    selectVariant="checkbox"
    variant={null}
  >
    <TableHeader />
    <TableBody />
  </Table>
  <TableFooter
    onPerPageSelect={[MockFunction]}
    onSetPage={[MockFunction]}
    page={NaN}
    paginationOUIA="bottom-undefined"
  />
</Fragment>
`;

exports[`TableView TableView 2`] = `
<Fragment>
  <PrimaryToolbar
    actionsConfig={
      Object {
        "actions": Array [
          <React.Fragment>
            <PatchRemediationButton
              isDisabled={true}
              isLoading={false}
              onClick={[Function]}
            />
            <Unknown />
          </React.Fragment>,
        ],
      }
    }
    activeFiltersConfig={
      Object {
        "deleteTitle": "Reset filters",
        "filters": Array [],
        "onDelete": [Function],
      }
    }
    bulkSelect={
      Object {
        "checked": false,
        "count": 0,
        "isDisabled": false,
        "items": Array [
          Object {
            "onClick": [Function],
            "title": "Select none (0)",
          },
          Object {
            "onClick": [Function],
            "title": "Select page (0)",
          },
          Object {
            "onClick": [Function],
            "title": "Select all ()",
          },
        ],
        "onSelect": [Function],
        "toggleProps": Object {
          "data-ouia-component-type": "bulk-select-toggle-button",
        },
      }
    }
    exportConfig={
      Object {
        "isDisabled": false,
        "onSelect": [MockFunction],
      }
    }
    filterConfig={
      Object {
        "items": Array [
          Object {
            "label": "First filter",
          },
          Object {
            "filterValues": Object {
              "items": Array [
                Object {
                  "label": "Some checkbox",
                },
              ],
            },
            "label": "Second filter",
            "type": "checkbox",
          },
        ],
      }
    }
    pagination={
      Object {
        "isCompact": true,
        "isDisabled": false,
        "itemCount": undefined,
        "onPerPageSelect": [MockFunction],
        "onSetPage": [MockFunction],
        "ouiaId": "top-undefined",
        "page": NaN,
        "perPage": undefined,
      }
    }
  />
  <Table
    aria-label="Patch table view"
    borders={true}
    canCollapseAll={true}
    canSelectAll={false}
    canSortFavorites={true}
    cells={Array []}
    className=""
    collapseAllAriaLabel=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    isHeaderSelectDisabled={false}
    isNested={false}
    isStickyHeader={true}
    isTreeTable={false}
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={Array []}
    selectVariant="checkbox"
    variant={null}
  >
    <TableHeader />
    <TableBody />
  </Table>
  <TableFooter
    onPerPageSelect={[MockFunction]}
    onSetPage={[MockFunction]}
    page={NaN}
    paginationOUIA="bottom-undefined"
  />
</Fragment>
`;

exports[`TableView test table props TableView 1`] = `
<Fragment>
  <PrimaryToolbar
    actionsConfig={
      Object {
        "actions": Array [
          <React.Fragment>
            <PatchRemediationButton
              isDisabled={true}
              isLoading={false}
              onClick={[Function]}
            />
            <Unknown />
          </React.Fragment>,
        ],
      }
    }
    activeFiltersConfig={
      Object {
        "deleteTitle": "Reset filters",
        "filters": Array [],
        "onDelete": [Function],
      }
    }
    bulkSelect={
      Object {
        "checked": false,
        "count": 0,
        "isDisabled": false,
        "items": Array [
          Object {
            "onClick": [Function],
            "title": "Select none (0)",
          },
          Object {
            "onClick": [Function],
            "title": "Select page (0)",
          },
          Object {
            "onClick": [Function],
            "title": "Select all (10)",
          },
        ],
        "onSelect": [Function],
        "toggleProps": Object {
          "data-ouia-component-type": "bulk-select-toggle-button",
        },
      }
    }
    exportConfig={
      Object {
        "isDisabled": false,
        "onSelect": [MockFunction],
      }
    }
    filterConfig={
      Object {
        "items": Array [
          Object {
            "label": "First filter",
          },
          Object {
            "filterValues": Object {
              "items": Array [
                Object {
                  "label": "Some checkbox",
                },
              ],
            },
            "label": "Second filter",
            "type": "checkbox",
          },
        ],
      }
    }
    pagination={
      Object {
        "isCompact": true,
        "isDisabled": false,
        "itemCount": 10,
        "onPerPageSelect": [MockFunction],
        "onSetPage": [MockFunction],
        "ouiaId": "top-undefined",
        "page": NaN,
        "perPage": undefined,
      }
    }
  />
  <Table
    aria-label="Patch table view"
    borders={true}
    canCollapseAll={true}
    canSelectAll={false}
    canSortFavorites={true}
    cells={Array []}
    className=""
    collapseAllAriaLabel=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    isHeaderSelectDisabled={false}
    isNested={false}
    isStickyHeader={true}
    isTreeTable={false}
    onCollapse={[MockFunction]}
    onSelect={[MockFunction]}
    onSort={[MockFunction]}
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={Array []}
    selectVariant="checkbox"
    sortBy={Object {}}
    variant={null}
  >
    <TableHeader />
    <TableBody />
  </Table>
  <TableFooter
    onPerPageSelect={[MockFunction]}
    onSetPage={[MockFunction]}
    page={NaN}
    paginationOUIA="bottom-undefined"
    totalItems={10}
  />
</Fragment>
`;
